<resources>
    <string name="app_name">InitiativeApp</string>
    <string name="placeholder">Placeholder</string>
    <string name="fillerText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="nameField">Name:</string>
    <string name="initiativeField">Initiative:</string>
    <string name="hpField">HP:</string>
    <string name="saveText">Save</string>
    <string name="newCharacterText">New Character</string>
    <string name="blinded_title">Blinded</string>
    <string name="blinded_description">A blinded creature can\'t see and automatically fails any ability check that requires sight. Attack rolls against the creature have advantage, and the creature’s attack rolls have disadvantage.</string>
    <string name="charmed_title">Charmed</string>
    <string name="charmed_description">A charmed creature can\'t attack the charmer or target the charmer with harmful abilities or magical effects. The charmer has advantage on any ability check to interact socially with the creature.</string>
    <string name="deafened_title">Deafened</string>
    <string name="deafened_description">A deafened creature can\'t hear and automatically fails any ability check that requires hearing.</string>
    <string name="exhausted_title">Exhausted</string>
    <string name="exhausted_description">Exhaustion is measured in six levels. An effect can give a creature one or more levels of exhaustion. \n 1.Disadvantage on ability checks \n 2.Speed halved \n 3.Disadvantage on attack rolls and saving throws \n 4.Hit point maximum halved \n 5.Speed reduced to \n 06.Death</string>
    <string name="frightened_title">Frightened</string>
    <string name="frightened_description">A frightened creature has disadvantage on ability checks and attack rolls while the source of its fear is within line of sight. The creature can’t willingly move closer to the source of its fear.</string>
    <string name="grappled_title">Grappled</string>
    <string name="grappled_description">A grappled creature’s speed becomes 0, and it can’t benefit from any bonus to its speed. The condition ends if the grappler is incapacitated (see the condition). The condition also ends if an effect removes the grappled creature from the reach of the grappler or grappling effect, such as when a creature is hurled away by the thunderwave spell.</string>
    <string name="incapacitated_title">Incapacitated</string>
    <string name="incapacitated_description">An incapacitated creature can\'t take actions or reactions.</string>
    <string name="invisible_title">Invisible</string>
    <string name="invisible_description">An invisible creature is impossible to see without the aid of magic or a special sense. For the purpose of hiding, the creature is heavily obscured. The creature’s location can be detected by any noise it makes or any tracks it leaves. Attack rolls against the creature have disadvantage, and the creature’s attack rolls have advantage.</string>
    <string name="paralyzed_title">Paralyzed</string>
    <string name="paralyzed_description">A paralyzed creature is incapacitated and can\'t move or speak. The creature automatically fails Strength and Dexterity saving throws. Attack rolls against the creature have advantage. Any attack that hits the creature is a critical hit if the attacker is within 5 feet of the creature.</string>
    <string name="petrified_title">Petrified</string>
    <string name="petrified_description">A petrified creature is transformed, along with any nonmagical object it is wearing or carrying, into a solid inanimate substance (usually stone). Its weight increases by a factor of ten, and it ceases aging. The creature is incapacitated (see the condition), can’t move or speak, and is unaware of its surroundings. Attack rolls against the creature have advantage. The creature automatically fails Strength and Dexterity saving throws. The creature has resistance to all damage. The creature is immune to poison and disease, although a poison or disease already in its system is suspended, not neutralized.</string>
    <string name="poisoned_title">Poisoned</string>
    <string name="poisoned_description">A poisoned creature has disadvantage on attack rolls and ability checks.</string>
    <string name="prone_title">Prone</string>
    <string name="prone_description">A prone creature’s only movement option is to crawl, unless it stands up and thereby ends the condition. The creature has disadvantage on attack rolls. An attack roll against the creature has advantage if the attacker is within 5 feet of the creature. Otherwise, the attack roll has disadvantage.</string>
    <string name="restrained_title">Restrained</string>
    <string name="restrained_description">A restrained creature’s speed becomes 0, and it can’t benefit from any bonus to its speed. Attack rolls against the creature have advantage, and the creature’s attack rolls have disadvantage. The creature has disadvantage on Dexterity saving throws.</string>
    <string name="stunned_title">Stunned</string>
    <string name="stunned_description">A stunned creature is incapacitated (see the condition), can’t move, and can speak only falteringly. The creature automatically fails Strength and Dexterity saving throws. Attack rolls against the creature have advantage.</string>
    <string name="unconscious_title">Unconscious</string>
    <string name="unconscious_description">An unconscious creature is incapacitated (see the condition), can’t move or speak, and is unaware of its surroundings The creature drops whatever it’s holding and falls prone. The creature automatically fails Strength and Dexterity saving throws. Attack rolls against the creature have advantage. Any attack that hits the creature is a critical hit if the attacker is within 5 feet of the creature.</string>
    <string name="blinded_title_esp">Cegado</string>
    <string name="blinded_description_esp">Una criatura cegada no puede ver y falla automáticamente cualquier chequeo de habilidad que requiera vista. Las tiradas de ataque contra la criatura tienen ventaja, y las tiradas de ataque de la criatura tienen desventaja.</string>
    <string name="charmed_title_esp">Encantado</string>
    <string name="charmed_description_esp">Una criatura encantada no puede atacar al encantador ni dirigirse al encantador con habilidades o efectos mágicos dañinos. El encantador tiene ventaja en cualquier chequeo de habilidad para interactuar socialmente con la criatura.</string>
    <string name="deafened_title_esp">Ensordecido</string>
    <string name="deafened_description_esp">Una criatura ensordecida no puede oír y falla automáticamente cualquier chequeo de habilidad que requiera oído.</string>
    <string name="exhausted_title_esp">Exhausto</string>
    <string name="exhausted_description_esp">La fatiga se mide en seis niveles. Un efecto puede dar a una criatura uno o más niveles de fatiga. \n 1. Desventaja en chequeos de habilidad \n 2. Velocidad reducida a la mitad \n 3. Desventaja en tiradas de ataque y salvaciones \n 4. Máximo de puntos de golpe reducido a la mitad \n 5. Velocidad reducida a 0 \n 6. Muerte</string>
    <string name="frightened_title_esp">Asustado</string>
    <string name="frightened_description_esp">Una criatura asustada tiene desventaja en chequeos de habilidad y tiradas de ataque mientras la fuente de su miedo esté a la vista. La criatura no puede moverse voluntariamente más cerca de la fuente de su miedo.</string>
    <string name="grappled_title_esp">Agarrado</string>
    <string name="grappled_description_esp">La velocidad de una criatura agarrada se convierte en 0, y no puede beneficiarse de ninguna bonificación a su velocidad. La condición termina si el que agarra está incapacitado (ver la condición). También termina si un efecto retira a la criatura agarrada del alcance del que la agarra o del efecto de agarre, como cuando una criatura es lanzada por el hechizo onda tronante.</string>
    <string name="incapacitated_title_esp">Incapacitado</string>
    <string name="incapacitated_description_esp">Una criatura incapacitada no puede realizar acciones ni reacciones.</string>
    <string name="invisible_title_esp">Invisible</string>
    <string name="invisible_description_esp">Una criatura invisible es imposible de ver sin la ayuda de la magia o un sentido especial. Para el propósito de esconderse, la criatura está fuertemente oscurecida. La ubicación de la criatura puede ser detectada por cualquier ruido que haga o cualquier rastro que deje. Las tiradas de ataque contra la criatura tienen desventaja, y las tiradas de ataque de la criatura tienen ventaja.</string>
    <string name="paralyzed_title_esp">Paralizado</string>
    <string name="paralyzed_description_esp">Una criatura paralizada está incapacitada y no puede moverse ni hablar. La criatura falla automáticamente las tiradas de salvación de Fuerza y Destreza. Las tiradas de ataque contra la criatura tienen ventaja. Cualquier ataque que golpee a la criatura es un golpe crítico si el atacante está a menos de 1,5 metros de la criatura.</string>
    <string name="petrified_title_esp">Petrificado</string>
    <string name="petrified_description_esp">Una criatura petrificada se transforma, junto con cualquier objeto no mágico que lleve o lleve consigo, en una sustancia inanimada sólida (generalmente piedra). Su peso aumenta en un factor de diez, y cesa de envejecer. La criatura está incapacitada (ver la condición), no puede moverse ni hablar, y no es consciente de su entorno. Las tiradas de ataque contra la criatura tienen ventaja. La criatura falla automáticamente las tiradas de salvación de Fuerza y Destreza. La criatura tiene resistencia a todo el daño. La criatura es inmune al veneno y las enfermedades, aunque un veneno o enfermedad ya en su sistema está suspendido, no neutralizado.</string>
    <string name="poisoned_title_esp">Envenenado</string>
    <string name="poisoned_description_esp">Una criatura envenenada tiene desventaja en tiradas de ataque y chequeos de habilidad.</string>
    <string name="prone_title_esp">Derribado</string>
    <string name="prone_description_esp">La única opción de movimiento de una criatura derribada es arrastrarse, a menos que se levante y así termine la condición. La criatura tiene desventaja en tiradas de ataque. Una tirada de ataque contra la criatura tiene ventaja si el atacante está a menos de 1,5 metros de la criatura. De lo contrario, la tirada de ataque tiene desventaja.</string>
    <string name="restrained_title_esp">Restringido</string>
    <string name="restrained_description_esp">La velocidad de una criatura restringida se convierte en 0, y no puede beneficiarse de ninguna bonificación a su velocidad. Las tiradas de ataque contra la criatura tienen ventaja, y las tiradas de ataque de la criatura tienen desventaja. La criatura tiene desventaja en las tiradas de salvación de Destreza.</string>
    <string name="stunned_title_esp">Aturdido</string>
    <string name="stunned_description_esp">Una criatura aturdida está incapacitada (ver la condición), no puede moverse y solo puede hablar balbuceando. La criatura falla automáticamente las tiradas de salvación de Fuerza y Destreza. Las tiradas de ataque contra la criatura tienen ventaja.</string>
    <string name="unconscious_title_esp">Inconsciente</string>
</resources>